under construction page

--- a/src/App.css
+++ b/src/App.css
@@ -1,126 +1,3 @@
-/* NAVBAR */
-.overlay {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.5); 
-  opacity: 0;
-  transition: opacity 0.3s ease;
-  z-index: 80; 
-  pointer-events: none;
-}
-
-.sidebar.open + .overlay {
-  opacity: 1;
-  pointer-events: auto;
-}
-
-.sidebar {
-  z-index: 90;
-  position: fixed;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  top: 0;
-  left: -36vw;
-  width: 36vw;
-  height: 100%;
-  background-color: rgb(253, 54, 40);
-  transition: left 500ms ease;
-}
-
-.sidebar.open {
-  left: 0;
-}
-
-.toggle-btn {
-  height: 100%;
-  width: 70px;
-  position: absolute;
-  left: 36vw;
-  background-color: rgb(253, 54, 40);
-  color: white;
-  border: none;
-  cursor: pointer;
-  font-size: 20px;
-  padding: 10px;
-  transition: 500ms ease;
-}
-
-
-.sidebar.open .toggle-btn {
-  left: 36vw;
-}
-
-.nav ul {
-  font-family: "rama-gothic-m", sans-serif;
-  letter-spacing: 0.1vw;
-  list-style-type: none;
-  padding: 20px;
-}
-
-.nav li {
-  margin: 20px 0;
-}
-
-.nav li a {
-  transition: 400ms ease;
-  color: #fff;
-  text-decoration: none;
-  font-size: 35px;
-}
-
-.nav li.active a, .nav li a:hover {
-  color: #027593; 
-  background-color: white;
-  padding: 3.5%;
-  border-radius: 7px;
-}
-
-
-.social-media{
-  display: flex;
-}
-
-.social-media path{
-  transition: 400ms ease;
-}
-
-.social-media div:hover path{
-  fill: #027593;
-}
-
-@media (max-width: 1024px) {
-  .sidebar {
-    top: -80vh;
-    left: 0;
-    height: 80vh;
-    width: 100%;
-    flex-direction: column;
-    transition: top 500ms ease;
-  }
-
-  .sidebar.open {
-    top: 0;
-  }
-
-  .toggle-btn {
-    width: 100%;
-    height: 70px;
-    top: 80vh;
-    left: 0;
-  }
-
-  .sidebar.open .toggle-btn {
-    top: 80vh;
-    left: 0;
-  }
-
-}
-/* NAVBAR ENDS HERE*/
-
 @font-face {
   font-family: "rama-gothic-m", sans-serif;
   font-weight: 600;
@@ -206,97 +83,7 @@ section a:active .icon {
 }
 
 .right-bottom {
-  width: 60%;
-}
-
-.image-slider {
-  width: 100%; 
-  overflow: hidden;
-}
-
-.image-slider img {
-  width: 100%; 
-  height: auto; 
-  object-fit: cover;
-}
-
-.image-slider .photo {
-  width: 100%; 
-}
-
-.photo-slider{
-  height: 400px;
-  position: relative;
-  width: 100%;
-  display: grid;
-  place-items: center;
-  overflow: hidden;
-}
-
-.slide-track{
-  display: flex;
-  width: calc(250px * 18);
-  animation: scroll 40s linear infinite;
-}
-
-.slide-track:hover{
-  animation-play-state: paused;
-}
-
-@keyframes scroll {
-  0%{
-    transform: translateX(0);
-  }
-  100%{
-    transform: translateX(calc(-250px * 9));
-  }
-}
-
-@keyframes scroll8 {
-  0%{
-    transform: translateX(0);
-  }
-  100%{
-    transform: translateX(calc(-250px * 8));
-  }
-}
-
-
-.slide{
-  position: relative;
-  height:200px;
-  width: 250px;
-  display: flex;
-  justify-content: column;
-  align-items: center;
-  padding: 15px;
-}
-
-.slide img{
-  cursor: default;
-  width: 100%;
-  border-radius: 7px;
-  transition: opacity 400ms ease;
-} 
-
-.slide:hover div{
-  opacity: 1;
-}
-
-.slide:hover img{
-  opacity: 50%;
-}
-
-.slide div {
-  position: absolute; 
-  display: flex;
-  justify-content: center;
-  top: 50%;      
-  left: 0;       
-  width: 100%;     
-  z-index: 2;     
-  opacity: 0;
-  transition: 400ms ease;
+  width: 90%;
 }
 
 .logo{
@@ -329,54 +116,27 @@ p {
   font-size: 1em;
 }
 
-.underline-animation{
-  display: inline-block;
-  position: relative;
-  color: #027593;
-}
-  
-.underline-animation::after {
-  content: '';
-  position: absolute;
-  width: 100%;
-  transform: scaleX(0);
-  height: 1px;
-  bottom: 0;
-  left: 0;
-  color: #027593;
-  background-color: #027593;
-  transform-origin: bottom right;
-  transition: transform 400ms ease;
-}
-  
-.underline-animation:hover::after {
-  transform: scaleX(1);
-  transform-origin: bottom left;
-}
-
 @media (max-width: 1024px) {
   section{
     flex-direction: column;
   }
 
-  .left-top, .right-bottom{
-    width: 100%;
-  }
+
 
   .logo{
     height: 6em;
-    padding-left: 5%;
   }
 }
 
 /* HOME PAGE */
-.home-page, .our-mission, .testimonials, .call-to-action, .ways-help{
+.home-page, .our-mission, .testimonials, .call-to-action, .ways-help, .right-bottom{
   height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
-.home-page .logo{
-  margin-left: 3%;
-}
 
 .home-page .right-bottom, .donate-home .right-bottom{
   transform: 400ms ease;
@@ -395,15 +155,6 @@ p {
   justify-content: center;  
 }
 
-.home-page .right-bottom :is(p, h1),
-.our-mission .left-top :is(p, h2),
-.ways-help .left-top :is(p, h2),
-.team .left-top :is(p, h2),
-.donate-info .left-top :is(p, h2), 
-.impact-volunteer .left-top :is(p, h2){
-  margin-left: 5%;
-  width: 60%;
-}
 
 .our-mission .right-bottom :is(p, h2, h3){
   margin-left: 10%;
@@ -619,18 +370,7 @@ p {
     margin-top: 70px;
   }
 
-  .home-page .logo{
-    margin-left: 0;
-  }
-  
-  .home-page .right-bottom{
-    padding-left: 0;
-  }
-  
-  .home-page .right-bottom :is(p, h1){
-    margin-left: 9%;
-    width: 70%;
-  }
+
    
   .home-page {
     flex-direction: row;
@@ -638,10 +378,6 @@ p {
   }
 
   .home-page .left-top {
-    width: 50%;
-  }
-  
-  .home-page .right-bottom {
     width: 50%;
   }
   
@@ -763,9 +499,6 @@ p {
     display: none;
   }
 
-  .home-page .right-bottom {
-    width: 100%;
-  }
   
   .get-involved{
     flex-direction: column;
@@ -790,595 +523,3 @@ p {
 }
 
 /* HOME PAGE ENDS */
-
-/* ABOUT PAGE */
-.about {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-}
-
-.team {
-  background-color: #027593;
-  display: flex;
-  flex-direction: column;
-  padding-bottom: 3em;
-
-  h2, p, h4{
-    color: white;
-  }
-
-  h4 {
-    margin: 0;
-    width: 40%;
-    font-weight: normal;
-  }
-
-}
-
-.team .staff{
-  display: grid;
-  grid-template-columns: repeat(7, 1fr);
-  grid-template-rows: repeat(1, 1fr);
-  width:100%;
-  margin-left: 70px;
-
-  .div1 { grid-area: 1 / 1 / 2 / 2; }
-  .div2 { grid-area: 1 / 2 / 2 / 3; }
-  .div3 { grid-area: 1 / 3 / 2 / 4; }
-  .div4 { grid-area: 1 / 4 / 2 / 5; }
-  .div5 { grid-area: 1 / 5 / 2 / 6; }
-  .div6 { grid-area: 1 / 6 / 2 / 7; }
-  .div7 { grid-area: 1 / 7 / 2 / 8; }
-  .div8 { grid-area: 1 / 1 / 2 / 2; }
-  .div9 { grid-area: 1 / 2 / 2 / 3; }
-  .div10 { grid-area: 1 / 3 / 2 / 4; }
-  .div11 { grid-area: 1 / 4 / 2 / 5; }
-  .div12 { grid-area: 1 / 5 / 2 / 6; }
-  .div13 { grid-area: 1 / 6 / 2 / 7; }
-  .div14 { grid-area: 1 / 7 / 2 / 8; }
-
-  img{
-    object-fit: cover;
-    height: 100%;
-    width: 100%;
-  }
-  
-  div {
-    position: relative;
-    transition: 400ms ease;
-  }
-
-}
-
-.about-mission {
-  flex-direction: column;
-}
-
-.ceo {
- height:70vh;
-}
-
-.about-mission .left-top p, .ceo p, .donate-home p{
-  width: 60%;
-}
-
-.about-mission .left-top, .about .donate{
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-  margin-top: 7%;
-  width: 100%;
-}
-
-.about .photo-slider{
-  height: 300px;
-}
-
-.about .slide-track{
-  animation: scroll-right 40s linear infinite;
-}
-
-.staff .hover-text {
-  display: flex;
-  position: absolute;
-  top: 0; /* Position from the top */
-  left: 0;
-  right: 0; /* Stretch to right edge */
-  bottom: 0; /* Stretch to bottom edge */
-  background-color: rgb(2,117,147, 0.75);
-  color: white;
-  padding: 5px;
-  /* For centering text */
-  align-items: center;
-  justify-content: center;
-  flex-direction: column; 
-  transition: 400ms ease;
-  opacity: 0;
-}
-
-.staff div:hover .hover-text {
-  opacity: 1; /* Use flex for centering */
-}
-
-.staff {
-  h3, h5, h6{
-    margin: 0;
-  }
-
-  h3{
-   color: white;
-  }
-} 
-
-@keyframes scroll-right {
-  0%{
-    transform: translateX(calc(-250px * 9));
-  }
-  100%{
-    transform: translateX(0);
-  }
-}
-
-.about .slide{
-  padding: 2px;
-}
-
-.about .slide div {
-  top: 10%;      
-}
-
-.about .donate{
-  background-color: #027593;
-  height: 30vh;
-}
-
-.about .donate h1{
-  color: white;
-}
-
-.ceo .left-top, .ceo .right-bottom,
-.donate-home .left-top, .donate-home .right-bottom{
-  width: 50vw;
-}
-
-.ceo .right-bottom, .donate-home .right-bottom{
-  margin-left: 100px;
-}
-
-.ceo img, .donate-home img{
-  width: 100%;
-  height: auto;
-}
-
-@media (max-width: 1024px) {  
-  .ceo, .donate-home {
-    flex-direction: row;
-  }
-
-  .team .staff{
-    margin-left: 0;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(3, 1fr);
-    .div1 { grid-area: 1 / 1 / 2 / 2; }
-    .div2 { grid-area: 1 / 2 / 2 / 3; }
-    .div3 { grid-area: 1 / 3 / 2 / 4; }
-    .div4 { grid-area: 2 / 2 / 3 / 3; }
-    .div5 { grid-area: 3 / 1 / 4 / 2; }
-    .div6 { grid-area: 3 / 2 / 4 / 3; }
-    .div7 { grid-area: 3 / 3 / 4 / 4; }
-  }
-  
-  .staff .hover-text h5{
-     font-size: 0.6em;
-  }
-  .staff .hover-text h6{
-     font-size: 0.5em;
-  }
-
-  .team h4, .about-mission .left-top p, .ceo p {
-    width: 80%;
-    font-size: 0.8em;
-  }  
-
-  .about-mission h2{ 
-    width: 80%;
-  }
-}
-
-@media (max-width: 768px) {
-  .ceo, .donate-home{
-    flex-direction: column;
-  }
-
-  .ceo .left-top, .ceo .right-bottom,
-  .donate-home .left-top, .donate-home .right-bottom{
-    width: 100%;
-  }
-
-}
-
-/* ABOUT PAGE ENDS */
-/*VOLUNTEER PAGE*/
-.second .slide-track{
-  animation: scroll-right 40s linear infinite;
-}
-
-.volunteer-home .slide-track:hover{
-  animation-play-state: paused;
-}
-
-.volunteer-home {
-  flex-direction: column;
-}
-
-.volunteer-home p{
-  width: 50%;
-  margin-bottom: 39.36px;
-}
-
-.volunteer-home .photo-slider{
-  height: 14em;
-}
-
-.volunteer-home h1{
-  margin-top: 39.36px;
-}
-
-.volunteer-home .second{
-  margin-top: 39.36px;
-}
-
-.volunteer-home .slide:hover img{
-  opacity: 1;
-}
-
-.impact-volunteer {
-  margin-top: 7%;
-  margin-bottom: 7%;
-  flex-direction: column;
-
-    a {
-     background-color: transparent;
-     padding: 0;
-     box-shadow: none;
-     height: auto;
-    }
-
-    ul, li{ 
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      width: 60%;
-      height: auto;
-      padding: 0;
-    }
-
-     li{ 
-      flex-direction: column;
-    }
-
-  p{
-    width: 60%;
-  } 
- 
-  h4, h5 {
-    color: #535353;
-  }
-
-  h5{
-    font-weight: normal;
-    font-size: 1em;
-  }  
-
-  h3 {
-    font-size: 2em;
-    margin:0;
-  }
-}
-
-@media (max-width: 1024px) {
-  .volunteer-home p{
-    width: 80%;
-  }
-
-  .volunteer-home a{
-    font-size: 0.8em;
-    margin-bottom: 39.36px;
-  }
-}
-@media (max-width: 768px) {
-  .volunteer-home .photo-slider{
-    height: 12em;
-  }
-  .volunteer-home .slide{
-    height: 100px;
-    width: 150px;
-  }
-
-  .impact-volunteer ul{ 
-      flex-direction: column;
-      height: auto;
-   }
-  
-   .impact-volunteer li, .impact-volunteer p {
-     width: 80%;
-   }
-   
-   h5{
-     width: 60%;
-   }  
-  
-   .impact-volunteer a {
-     font-size: 1em;
-   }
-   
-   .impact-volunteer li{  
-     padding-bottom: 10px;
-     border-bottom: 0.5px solid rgb(2,117,147, 0.5);
-   }
-   
-}
-
-
-/*VOLUNTEER PAGE ENDS*/
-
-
-/*PROJECTS PAGE*/
-.project-home{
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  margin-top: 5%;
-  margin-bottom: 10%;
-  .next-to-each-other{ 
-    justify-content: center;
-    gap: 1em;
-    margin-top: 3em;
-  }
-
-  p{ 
-    width: 60%;
-  }
-}
-.wheelchair{
-  .photo img{
-    object-fit: contain;
-    width: 100%;
-  }
-
-  .right-bottom{ 
-    margin-left: 60px;
-  
-    p{
-      width: 80%;
-    }
-    
-    .underline-animation{
-      display: flex;
-      width: 10em;
-      svg {
-        object-fit: contain;
-      }
-    }
-  }
-
-  a{ 
-    background-color: transparent;
-     padding: 0;
-     box-shadow: none;
-     height: auto;
-  }
-}
-
-@media (max-width: 768px) {
-  .project-home{
-    margin-top: 20%; 
-    
-    a{
-      font-size: 0.7em;
-    }
-  }
-
-}
-
-/*PROJECTS PAGE ENDS*/
-/*DONATE PAGE*/
-@keyframes scroll25 {
-  0%{
-    transform: translateX(0);
-  }
-  100%{
-    transform: translateX(calc(-15em * 12.5));
-  }
-}
-
-.sponsors{
-  flex-direction: column;
-  height: auto;
-  padding-bottom: 6em; 
-  .photo-slider{
-    height: auto;
-  }
-
-  .slide-track{
-    width: calc(15em * 50);
-    animation: scroll25 50s linear infinite;
-  }
-
-  h2, h4{
-    margin: 0;
-    color:#027593;
-  }
-
-  h2{
-    font-size: 2em;
-  }
-
-  .slide{
-   height:7em;
-    img{
-      object-fit: contain;
-      height: 75%;
-    }
-  }
-
-  a h4:hover{
-    background-color: #027593;
-    color: white;
-  }
-}
-
-.sponsors a, .donate-info .right-bottom a{
-  background-color: transparent;
-  padding: 0;
-  box-shadow: none;
-  height: auto;
-  flex-direction: column;
-  transition: 400ms ease;
- }
-
- .sponsors a h4{
-  border: 1px solid #027593;
-  padding: 1em;
-  margin-top: 1em;
-  transition: 400ms ease;
-  border-radius: 7px;
-}
-
-.donate-info {
-  .right-bottom {
-    background-color: #e0645d;
-    gap: 2em;
-    height: 100vh;
-    .full-height{
-      height: 100%; width: 100%;
-      display: flex; 
-      align-items: center;  
-      justify-content: center;  
-    }
-
-    .underline-animation {
-      color: white;
-    }
-
-    .underline-animation::after {
-      color: white;
-      background-color: white;
-    }
-
-    div::before{ 
-      background-color: #e0645d;
-    }
-
-    a:hover{
-      background-color: #dc8985;
-    }
-  }
-
-  .left-top{
-    border: 20px solid #e0645d;
-    height: calc(100vh - 40px);
-  }
-}
-
-.donate-home{ 
-  height: 100vh;
-
-  a{
-    margin-top: 2em;
-    width: 25%;
-    font-size: 1em;
-  }
-}
-
-@media (max-width: 1024px) {
-  .donate-info {
-    
-    .left-top{
-      border: none;
-      margin-bottom: 2em;
-      border-top: 10px solid #e0645d;
-    }
-    
-    .right-bottom {
-      height: auto;
-      width: 100%;
-      gap: 1em;
-      padding: 0;
-
-      div{
-        border-radius: 0px;
-        padding: 1em;
-        border-right: 3px solid white;
-
-        svg{
-          height: 8em;
-          width: 10em;
-        }
-      }
-
-      #paypal{
-        border: none;
-      }
-    }
-    .left-top{
-      height: auto;
-    }
-  }
-}
-
-@media (max-width: 768px) {
-  .donate-info {
-    .right-bottom {
-      div{
-        border-right: 1px solid white;
-        svg{
-          height: 4em;
-          width: 5em;
-        }
-      }
-
-      #paypal{
-        border: none;
-      }
-    }
-    .left-top{
-      height: auto;
-    }
-  }
-
-  .sponsors{
-    .slide{
-      object-fit: contain;
-      height: 8em;
-      width: 8em;
-    }
-
-
-  }
-
-}
-/*DONATE PAGE ENDS*/
-
-@keyframes slide-right {
-  0%{
-    transform: translateX(-40%);
-  }
-  100%{
-    transform: translateX(0);
-  }
-  
-}
-
-@keyframes slide-left {
-  0%{
-    transform: translateX(60%);
-  }
-  100%{
-    transform: translateX(0);
-  }
-  
-}
