--- a/src/App.css
+++ b/src/App.css
@@ -31,7 +31,7 @@ html {
   left: -36vw;
   width: 36vw;
   height: 100%;
-  background-color: rgb(253, 54, 40);
+  background-color: #fd5a28f3;
   transition: left 500ms ease;
 }
 
@@ -44,18 +44,32 @@ html {
   width: 70px;
   position: absolute;
   left: 36vw;
-  background-color: rgb(253, 54, 40);
+  background-color: #fd5a28f3;
   color: white;
   border: none;
   cursor: pointer;
-  font-size: 20px;
+  font-size: 1.5em;
   padding: 10px;
   transition: 500ms ease;
+  font-family: "rama-gothic-m", sans-serif;
+  letter-spacing: 0.1em;
+
+  p{
+    color: white;
+    margin: 0;
+    white-space: pre-wrap;
+    word-wrap: break-word;
+  }
+
 }
 
 
 .sidebar.open .toggle-btn {
   left: 36vw;
+
+  p{
+    display: none;
+  }
 }
 
 .nav ul {
@@ -63,6 +77,7 @@ html {
   letter-spacing: 0.1vw;
   list-style-type: none;
   padding: 20px;
+  padding-bottom: 0px;
 }
 
 .nav li {
@@ -82,7 +97,6 @@ html {
   padding: 3.5%;
   border-radius: 7px;
 }
-
 
 .social-media{
   display: flex;
@@ -144,14 +158,14 @@ section {
 
 h1, h2, h3 {
   font-family: "rama-gothic-m", sans-serif;
-  color: rgb(253, 54, 40);
+  color: #fd5a28f3;
 }
 
 p{
   color: #535353;
 }
 section a {
-  background: rgb(253, 54, 40);
+  background: #fd5a28f3;
   color: white;
   font-family: inherit;
   padding: 0.35em;
@@ -168,6 +182,25 @@ section a {
   height: 2.8em;
   padding-right: 3.3em;
   cursor: pointer;
+}
+
+.special{
+  background: transparent;
+  color: inherit;
+  font-family: inherit;
+  padding: 0;
+  display: inline;
+  box-shadow: none;
+  overflow: hidden;
+  position: relative;
+  height: auto;
+  cursor: pointer;
+  text-decoration: underline;
+  transition: 400ms ease;
+}
+
+.special:hover{
+  opacity: 60%;;
 }
 
 section a .icon {
@@ -327,12 +360,12 @@ a {
 }
 
 li {
-  font-size: 0.85em;
+  font-size: 1em;
 }
 
 p {
-  font-size: 1em;
 }
+
 
 .underline-animation{
   display: inline-block;
@@ -505,6 +538,32 @@ p {
   opacity: 0;
 }
 
+.testimonials{
+  height: 100vh;
+  #review-btn{
+    background: black;
+    border-radius: 40px;
+    box-shadow: inset 0 0 1.6em -0.6em black;
+    font-size: 0.85em;
+    transition: 400ms ease;
+
+    .icon{
+      box-shadow: 0.1em 0.1em 0.6em 0.2em black;
+      border-radius: 50%;
+    }
+    svg{
+      fill:rgb(0, 120, 145);
+    }
+  }
+
+  #review-btn:hover {
+    opacity: 50%;
+
+    .icon {
+      width:  2.2em;
+    }
+  }
+}
 
 .left-top .end{
   display: flex;
@@ -515,6 +574,7 @@ p {
 .call-to-action{
   flex-direction: column;
   width: 100%;
+  margin-top: 20%;
 }
 
 .get-involved{
@@ -772,25 +832,16 @@ p {
 
 .team .staff{
   display: grid;
-  grid-template-columns: repeat(7, 1fr);
-  grid-template-rows: repeat(1, 1fr);
+  grid-template-columns: repeat(5, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  grid-column-gap: 0px;
+  grid-row-gap: 0px;
   width:100%;
-  margin-left: 70px;
 
-  .div1 { grid-area: 1 / 1 / 2 / 2; }
-  .div2 { grid-area: 1 / 2 / 2 / 3; }
-  .div3 { grid-area: 1 / 3 / 2 / 4; }
-  .div4 { grid-area: 1 / 4 / 2 / 5; }
-  .div5 { grid-area: 1 / 5 / 2 / 6; }
-  .div6 { grid-area: 1 / 6 / 2 / 7; }
-  .div7 { grid-area: 1 / 7 / 2 / 8; }
-  .div8 { grid-area: 1 / 1 / 2 / 2; }
-  .div9 { grid-area: 1 / 2 / 2 / 3; }
-  .div10 { grid-area: 1 / 3 / 2 / 4; }
-  .div11 { grid-area: 1 / 4 / 2 / 5; }
-  .div12 { grid-area: 1 / 5 / 2 / 6; }
-  .div13 { grid-area: 1 / 6 / 2 / 7; }
-  .div14 { grid-area: 1 / 7 / 2 / 8; }
+  .div1 { grid-area: 2 / 2 / 3 / 3; }
+  .div2 { grid-area: 2 / 3 / 3 / 4; }
+  .div3 { grid-area: 2 / 4 / 3 / 5; }
+  .div4 { grid-area: 1 / 3 / 2 / 4; }
 
   img{
     object-fit: cover;
@@ -886,6 +937,7 @@ p {
 .about .donate{
   background-color: #027593;
   height: 30vh;
+  padding-bottom: 30px;
 }
 
 .about .donate h1{
@@ -914,7 +966,7 @@ p {
   .team .staff{
     margin-left: 0;
     grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(3, 1fr);
+    grid-template-rows: repeat(2, 1fr);
     .div1 { grid-area: 1 / 1 / 2 / 2; }
     .div2 { grid-area: 1 / 2 / 2 / 3; }
     .div3 { grid-area: 1 / 3 / 2 / 4; }
@@ -996,13 +1048,6 @@ p {
   margin-top: 7%;
   margin-bottom: 7%;
   flex-direction: column;
-
-    a {
-     background-color: transparent;
-     padding: 0;
-     box-shadow: none;
-     height: auto;
-    }
 
     ul, li{ 
       display: flex;
@@ -1123,10 +1168,9 @@ p {
   }
 
   a{ 
-    background-color: transparent;
-     padding: 0;
-     box-shadow: none;
-     height: auto;
+    width: 7em;
+    margin-top: 2em;
+    font-size: 0.85em;
   }
 }
 
@@ -1180,6 +1224,16 @@ p {
   a{
     margin-top: 1em;
     font-size: 0.85em;
+  }
+
+  h4, h2, a{
+    color: white;
+    margin-bottom: 0;
+  }
+
+  .special{
+    margin-bottom: 1em;
+    margin-top: 0;
   }
 }
 
@@ -1312,9 +1366,9 @@ p {
     }
     
     a{
-      width: 10%;
-      font-size: 0.8em;
+      font-size: 1em;
       margin-top: 3em;
+      border: 0;
     }
   }
 }
@@ -1398,8 +1452,6 @@ p {
       }
     
       a{
-        width: 30%;
-        font-size: 0.8em;
         margin-top: 2em;
       }
     }
@@ -1474,6 +1526,7 @@ p {
 .slider-nav {
   display: flex;
   gap: 5px;
+  margin-bottom: 5%;
 }
 
 .slider-nav button {
@@ -1570,13 +1623,13 @@ p {
 }
 
 #google_translate_element ::-webkit-scrollbar-thumb {
-    background-color: #FD3628; /* Color of the scrollbar thumb */
+    background-color: #fd5a28f3; /* Color of the scrollbar thumb */
     border-radius: 10px; /* Rounded corners */
     border: 2px solid #f1f1f1; /* Border around the scrollbar thumb */
 }
 
 #google_translate_element ::-webkit-scrollbar-thumb:hover {
-    background: #FD3628; /* Color of the scrollbar thumb on hover */
+    background: #fd5a28f3; /* Color of the scrollbar thumb on hover */
 }
 
 /* For Firefox */
@@ -1587,9 +1640,6 @@ p {
 
 /* Custom scrollbar for IE and Edge */
 @supports (-ms-overflow-style: none) {
-    #google_translate_element {
-        -ms-overflow-style: -ms-autohiding-scrollbar;
-    }
 
     #google_translate_element::-ms-scrollbar {
         width: 12px; /* Width of the scrollbar */
@@ -1600,16 +1650,15 @@ p {
     }
 
     #google_translate_element::-ms-scrollbar-thumb {
-        background-color: #FD3628; /* Color of the scrollbar thumb */
+        background-color: #fd5a28f3; /* Color of the scrollbar thumb */
         border-radius: 10px; /* Rounded corners */
         border: 2px solid #f1f1f1; /* Border around the scrollbar thumb */
     }
 
     #google_translate_element::-ms-scrollbar-thumb:hover {
-        background: #FD3628; /* Color of the scrollbar thumb on hover */
+        background: #fd5a28f3; /* Color of the scrollbar thumb on hover */
     }
 }
 
-body > .skiptranslate {
-    display: none;
-}
+
+
